deployments/prod/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chatorbit-prod
  labels:
    app: chatorbit
    environment: production
