deployments/prod/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: chatorbit-prod
  labels:
    app: chatorbit
    component: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatorbit
      component: auth
  template:
    metadata:
      labels:
        app: chatorbit
        component: auth
    spec:
      containers:
        - name: auth-service
          image: celesteyang/auth:c73edf157b4cb776cff172bcdc3e64f612691b42
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8089
          readinessProbe:
            tcpSocket:
              port: 8089
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8089
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
