deployments/prod/k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: chatorbit-prod
  labels:
    app: chatorbit
    component: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatorbit
      component: user
  template:
    metadata:
      labels:
        app: chatorbit
        component: user
    spec:
      containers:
        - name: user-service
          image: celesteyang/user:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8087
          readinessProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
