deployments/prod/k8s/chatorbit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatorbit
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - 104.199.143.43.nip.io
    secretName: chatorbit-tls

  rules:
  - host: 104.199.143.43.nip.io
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8089
      - path: /chat
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 8088
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8087
